--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title Exclamations!
+    title CincyBrewScene!
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css', integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7', crossorigin='anonymous')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css', integrity='sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r', crossorigin='anonymous')
     style.
@@ -11,4 +11,4 @@ html(lang='en')
   body
     .container-fluid
       .col-md-4.col-md-offset-4
-        img(src='/images/logo.png')
+        img(src='/images/CincyBrewScene-logo.png')
