--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,23 @@
+body {
+  font-family: 'Cairo', sans-serif;
+}
+.homeLogo {
+  margin: 0px auto;
+  display: block;
+  max-width: 100%;
+  margin-top: 20px;
+}
 .homeButtons a {
+  margin-top: 20px;
   background-color: white;
   background-image: none;
   border: 2px solid black;
   color: black;
+  font-size: 20px;
+  padding: 15px 0px;
+  transition: background-color 0.9s ease;
+}
+.homeButtons a:hover {
+  background-color: black;
+  color: #fff;
 }
