--- a/views/index.html
+++ b/views/index.html
@@ -4,19 +4,22 @@
     <title>CincyBrewScene!</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet"> 
 
     <link rel="stylesheet" href="/css/main.css">
 
   </head>
   <body>
     <div class="container-fluid">
-      <div class="col-md-4 col-md-offset-4">
-        <img src="/images/CincyBrewScene-logo.png">
-      </div>
+      <div class="row">
+        <div class="col-md-4 col-xs-12 col-md-offset-4">
+          <img class="homeLogo" src="/images/CincyBrewScene-logo.png">
+        </div>
 
-      <div class="col-md-4 homeButtons col-md-offset-4">
-        <a class="col-xs-5 btn btn-primary" href="#">View Breweries</a>
-        <a class="col-xs-5 col-xs-offset-2 btn btn-primary" href="#">View Crawls</a>
+        <div class="col-md-4 homeButtons col-md-offset-4">
+          <a class="col-xs-5 btn btn-primary" href="#">Find Breweries</a>
+          <a class="col-xs-5 col-xs-offset-2 btn btn-primary" href="#">Create A Crawl</a>
+        </div>
       </div>
     </div>
   </body>
