--- a/public/less/main.less
+++ b/public/less/main.less
@@ -10,7 +10,7 @@ body {
 	margin-top:20px;
 }
 
-.homeButtons a {
+.homeButtons .btn {
 	margin-top:20px;
 	background-color:white;
 	background-image:none;
@@ -24,4 +24,10 @@ body {
 		background-color:black;
 		color:#fff;
 	}
+}
+
+.homeButtons a {
+	color:black;
+	margin-top:20px;
+	text-decoration: uppercase;
 }
