--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,8 +21,11 @@ body {
   background-color: black;
   color: #fff;
 }
-.homeButtons a {
+.homeButtons .text {
   color: black;
   margin-top: 20px;
   text-decoration: uppercase;
+  margin: 0px auto;
+  display: inline-block;
+  margin-top: 15px;
 }
