--- a/views/index.html
+++ b/views/index.html
@@ -19,9 +19,9 @@
         </div>
 
         <div class="col-md-4 homeButtons col-md-offset-4">
-          <a class="col-xs-5 btn btn-primary" href="#">Find Breweries</a>
-          <a class="col-xs-5 col-xs-offset-2 btn btn-primary" href="#">Create A Crawl</a>
-          <a href="#">Looking to Join a Crawl?</a>
+          <a class="col-xs-12 col-md-5 btn btn-primary" href="#">Find Breweries</a>
+          <a class="col-xs-12 col-md-5 col-md-offset-2 btn btn-primary" href="#">Create A Crawl</a>
+          <a class="text" href="#">Looking to Join a Crawl?</a>
         </div>
       </div>
     </div>
