--- a/public/less/main.less
+++ b/public/less/main.less
@@ -26,8 +26,11 @@ body {
 	}
 }
 
-.homeButtons a {
+.homeButtons .text {
 	color:black;
 	margin-top:20px;
 	text-decoration: uppercase;
+	margin:0px auto;
+	display:inline-block;
+	margin-top:15px;
 }
