adding handlebars and stuff

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -3,6 +3,20 @@ body {
     font-family: 'Cairo', sans-serif;
 }
 
+header {
+	background-color:lighten(black,10);
+	color:#fff;
+	height:80px;
+
+	h2 {
+		text-align:center;
+	}
+
+	i {
+		margin-right:10px;
+	}
+}
+
 .homeLogo {
 	margin:0px auto;
 	display:block;
@@ -33,4 +47,14 @@ body {
 	margin:0px auto;
 	display:inline-block;
 	margin-top:15px;
+}
+
+.createForm {
+	margin-top:30px;
+
+	input {
+		margin-bottom:20px;
+		color:#000;
+		border:1px solid darken(#DADADA,10);
+	}
 }
