--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,17 @@
 body {
   font-family: 'Cairo', sans-serif;
 }
+header {
+  background-color: #1a1a1a;
+  color: #fff;
+  height: 80px;
+}
+header h2 {
+  text-align: center;
+}
+header i {
+  margin-right: 10px;
+}
 .homeLogo {
   margin: 0px auto;
   display: block;
@@ -28,4 +39,12 @@ body {
   margin: 0px auto;
   display: inline-block;
   margin-top: 15px;
+}
+.createForm {
+  margin-top: 30px;
+}
+.createForm input {
+  margin-bottom: 20px;
+  color: #000;
+  border: 1px solid #c1c1c1;
 }
