--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,15 @@
 body {
   font-family: 'Cairo', sans-serif;
 }
-header {
+.header {
   background-color: #1a1a1a;
   color: #fff;
   height: 80px;
 }
-header h2 {
+.header h2 {
   text-align: center;
 }
-header i {
+.header i {
   margin-right: 10px;
 }
 .homeLogo {
@@ -47,4 +47,14 @@ header i {
   margin-bottom: 20px;
   color: #000;
   border: 1px solid #c1c1c1;
+}
+.brewery {
+  padding: 20px;
+}
+.brewery img {
+  max-width: 100%;
+  max-height: 100px;
+}
+.brewery.active img {
+  border: 2px solid grey;
 }
