--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,11 +1,13 @@
 <div class="container-fluid">
   <div class="row">
-    <header class="col-xs-12">
+    <div class="header col-xs-12">
         <h2><i class="fa fa-beer" aria-hidden="true"></i> Create A Crawl</h2>
-    </header>
+    </div>
+
 
     <section class="col-md-6 col-md-offset-3">
       <form class="createForm">
+
         <div class="form-group">
           <label for="name">Name *</label>
           <input type="text" required class="form-control" id="name">
@@ -20,6 +22,16 @@
               </div>
           </div>
         </div>
+
+        <div class="form-group">
+          <label for="test">What Breweries Interest You *</label>
+        </div>
+
+        {{#each brews}}
+            <div data-breweryID='{{this._id}}' class="brewery col-xs-6 col-md-4">
+              <img src="{{this.logo}}" />
+            </div>
+        {{/each}}
 
       </form>
     </section>
