--- a/public/less/main.less
+++ b/public/less/main.less
@@ -1,3 +1,4 @@
+@import "social"; 
 
 body {
     font-family: 'Cairo', sans-serif;
@@ -8,6 +9,7 @@ body {
 	background-color:lighten(black,10);
 	color:#fff;
 	height:80px;
+	margin-bottom:30px;
 
 	h2 {
 		text-align:center;
@@ -51,8 +53,6 @@ body {
 }
 
 .createForm {
-	margin-top:30px;
-
 	input {
 		margin-bottom:20px;
 		color:#000;
