Updated index view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -58,3 +58,14 @@ body {
 .brewery.active img {
   border: 2px solid grey;
 }
+.top5 { margin-top:5px; }
+.top7 { margin-top:7px; }
+.top10 { margin-top:10px; }
+.top15 { margin-top:15px; }
+.top17 { margin-top:17px; }
+.top30 { margin-top:30px; }
+.social {
+  padding-right: 5px;
+  padding-left: 5px;
+  color: #000;
+}
