--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -3,11 +3,28 @@
     <div class="col-md-4 col-xs-12 col-md-offset-4">
       <img class="homeLogo" src="/images/CincyBrewScene-logo.png">
     </div>
+  </div>
 
+  <div class="row top15">
     <div class="col-md-4 homeButtons col-md-offset-4">
-      <a class="col-xs-12 col-md-5 btn btn-primary" href="#">Find Breweries</a>
-      <a class="col-xs-12 col-md-5 col-md-offset-2 btn btn-primary" href="/create">Create A Crawl</a>
-      <a class="text" href="#">Looking to Join a Crawl?</a>
+        <p>
+          <a class="col-xs-12 col-md-5 btn btn-primary" href="#">Find Breweries</a>
+          <a class="col-xs-12 col-md-5 col-md-offset-2 btn btn-primary" href="/create">Create A Crawl</a>
+        </p>
+    </div>
+  </div>
+  <div class="row top15">
+    <div class="col-md-12 joinCrawl">
+      <p class="text-center"><a class="text-center" href="#">Looking to Join a Crawl?</a></p>
+    </div>
+  </div>
+
+  <div class="row top15">
+    <div class="col-md-12 socialIcons">
+      <p class="text-center">
+          <a href="https://www.facebook.com/cincybrewscene/" target="_blank"><i class="fa fa-facebook fa-2x social" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/CincyBrewScene" target="_blank"><i class="fa fa-twitter fa-2x social" aria-hidden="true"></i></a>
+      </p>
     </div>
   </div>
 </div>
