front end stuff

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -16,7 +16,7 @@
         <div class="form-group">
           <label for="name">Start Date *</label>
           <div class="input-group date">
-              <input type="text" class="datepicker form-control" value="12-02-2012">
+              <input type="text" class="datepicker form-control" value="">
               <div class="input-group-addon">
                   <span class="glyphicon glyphicon-th"></span>
               </div>
@@ -50,3 +50,7 @@
     </section>
   </div>
 </div>
+
+{{#section 'scripts'}}
+<script src="js/main.js"></script>
+{{/section}}
