--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1561,9 +1561,11 @@ body {
   max-height: 100px;
   margin: 0px auto;
   display: block;
+  filter: grayscale(100%);
 }
 .brewery.active img {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  transform: scale(1.4) rotate(20deg);
+  filter: none;
 }
 .btn-primary {
   margin-top: 20px;
