--- a/public/less/main.less
+++ b/public/less/main.less
@@ -67,12 +67,16 @@ body {
 		max-height:100px;
 		margin:0px auto;
 		display:block;
+		filter: grayscale(100%);
+
 	}
 }
 
 .brewery.active {
 	img {
-		box-shadow:0px 0px 10px rgba(0,0,0,.5);
+		//box-shadow:0px 0px 10px rgba(0,0,0,.5);
+		transform:scale(1.4) rotate(20deg);
+		filter: none;
 	}
 }
 
