--- a/public/less/main.less
+++ b/public/less/main.less
@@ -62,13 +62,16 @@ body {
 
 .brewery {
 	padding:20px;
+	height:150px;
 	img {
 		max-width:100%;
 		max-height:100px;
 		margin:0px auto;
 		display:block;
 		filter: grayscale(100%);
-
+		filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale"); /* Firefox 10+, Firefox on Android */
+        filter: gray; /* IE6-9 */
+        -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 	}
 }
 
@@ -76,7 +79,10 @@ body {
 	img {
 		//box-shadow:0px 0px 10px rgba(0,0,0,.5);
 		transform:scale(1.4) rotate(20deg);
-		filter: none;
+		-webkit-transform: scale(1.4) rotate(20deg);
+		filter: url("data:image/svg+xml;utf8,&lt;svg xmlns=\'http://www.w3.org/2000/svg\'&gt;&lt;filter id=\'grayscale\'&gt;&lt;feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/&gt;&lt;/filter&gt;&lt;/svg&gt;#grayscale"); /* Firefox 10+, Firefox on Android */
+        filter: gray; /* IE6-9 */
+        -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 	}
 }
 
