--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -1,3 +1,4 @@
 {{#section 'scripts'}}
-<script src="js/find_directions.js"></script>
+<script src="https://js.arcgis.com/4.0/"></script>
+<script src="dist/find_directions.js"></script>
 {{/section}}
