adding new map stuff

--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -1,3 +1,5 @@
+<div id="map"></div>
+
 {{#section 'scripts'}}
-<script src="js/find_directions.js"></script>
+<script src="js/map.js"></script>
 {{/section}}
