--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1553,6 +1553,10 @@ body {
   color: #000;
   border: 1px solid #c1c1c1;
 }
+#map {
+  width: 100%;
+  height: 900px;
+}
 .brewery {
   padding: 20px;
   height: 150px;
@@ -1598,4 +1602,43 @@ body {
   float: left;
   margin-top: 40px;
   display: inline-block;
+}
+.leaflet-popup {
+  bottom: 40px !important;
+}
+.leaflet-popup-content b {
+  background-color: #000;
+  color: #fff;
+  display: block;
+  padding: 10px 20px;
+  width: 102%;
+  margin-left: -1%;
+  margin-top: -5px;
+  border-radius: 10px 10px 0px 0px;
+}
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 55;
+}
+.leaflet-popup-close-button {
+  color: #fff !important;
+  margin-top: 2px;
+  margin-right: 10px;
+  transition: all .2s;
+}
+.leaflet-popup-close-button:hover {
+  transform: scale(1.5);
+}
+.leaflet-popup-content {
+  margin: 0;
+}
+.leaflet-popup-content .content {
+  padding: 20px;
+  padding-top: 0;
+  padding-bottom: 5px;
+}
+.leaflet-popup-content .content a {
+  margin-top: 20px;
+  display: block;
+  width: 100%;
 }
