--- a/public/less/main.less
+++ b/public/less/main.less
@@ -60,6 +60,11 @@ body {
 	}
 }
 
+#map {
+	width:100%;
+	height:900px;
+}
+
 .brewery {
 	padding:20px;
 	height:150px;
@@ -106,4 +111,51 @@ body {
 	float:left;
 	margin-top:40px;
 	display:inline-block;
+}
+
+.leaflet-popup {
+	bottom:40px !important;
+}
+
+.leaflet-popup-content b {
+    background-color: #000;
+    color: #fff;
+    display: block;
+    padding: 10px 20px;
+    width: 102%;
+    margin-left:-1%;
+    margin-top:-5px;
+    border-radius:10px 10px 0px 0px;
+}
+
+.leaflet-top, .leaflet-bottom {
+  z-index:55;
+}
+
+  .leaflet-popup-close-button {
+    color:#fff !important;
+    margin-top:2px;
+    margin-right:10px;
+    transition: all .2s;
+
+    &:hover {
+       transform: scale(1.5);
+    }
+  }
+
+.leaflet-popup-content {
+  margin:0;
+
+
+  .content {
+    padding:20px;
+    padding-top:0;
+    padding-bottom:5px;
+
+    a {
+      margin-top:20px;
+      display:block;
+      width:100%;
+    }
+  }
 }
