fixing more things

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
     </div>
 
     <div class="col-md-4 homeButtons col-md-offset-4">
-      <a class="col-xs-12 col-md-5 btn btn-primary" href="#">Find Breweries</a>
+      <a class="col-xs-12 col-md-5 btn btn-primary" href="/map">Find Breweries</a>
       <a class="col-xs-12 col-md-5 col-md-offset-2 btn btn-primary" href="/create">Create A Crawl</a>
       <a class="text" href="#">Looking to Join a Crawl?</a>
     </div>
