--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -1,7 +1,8 @@
+<input type="hidden" id="id" value="{{id}}">
 <div id="map"></div>
 
 {{#section 'scripts'}}
-<script src="dist/map.js"></script>
+<script src="/dist/map-crawl.js"></script>
 <script src="https://js.arcgis.com/4.0/"></script>
 <script src="dist/find_directions.js"></script>
 {{/section}}
