--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1610,3 +1610,11 @@ body {
   padding-left: 5px;
   color: #000;
 }
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: #f5f5f5;
+}
