--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,4 +27,16 @@
       </p>
     </div>
   </div>
+
 </div>
+<footer class="footer">
+  <div class="container">
+    <div class="col-md-4 col-md-offset-4">
+      <p class="text-muted text-center">
+        <a href="/privacy">Privacy Policy</a>
+        <span>|</span>
+        <a href="/tos">Terms & Conditions</a>
+      </p>
+    </div>
+  </div>
+</footer>
