--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -1,5 +1,10 @@
 <div id="map"></div>
 
+<a href="/create" class="btn btn-default create-button homeButtons">
+  <i class="fa fa-plus" aria-hidden="true"></i>
+  Create a crawl
+</a>
+
 {{#section 'scripts'}}
 <script src="dist/map.js"></script>
 <script src="https://js.arcgis.com/4.0/"></script>
