--- a/views/uber.handlebars
+++ b/views/uber.handlebars
@@ -1,15 +1,15 @@
 <div class="container-fluid">
   <div class="row">
     <div class="header col-xs-12">
-        <h2><i class="fa fa-beer" aria-hidden="true"></i> Login</h2>
+        <h2><i class="fa fa-beer" aria-hidden="true"></i> Uber</h2>
     </div>
 
 
     <section class="col-md-6 col-md-offset-3">
-      <p>Get an Uber</p>
+      <p class="text-center">Get an Uber</p>
 
       <span>
-        <a href="https://m.uber.com/ul?client_id=gY6iGb3XfnCI35tZ968HvPWA1rmgBSK1&action=setPickup&pickup[latitude]=37.775818&pickup[longitude]=-122.418028&pickup[nickname]=UberHQ&pickup[formatted_address]=1455%20Market%20St%2C%20San%20Francisco%2C%20CA%2094103&dropoff[latitude]=37.802374&dropoff[longitude]=-122.405818&dropoff[nickname]=Coit%20Tower&dropoff[formatted_address]=1%20Telegraph%20Hill%20Blvd%2C%20San%20Francisco%2C%20CA%2094133&product_id=a1111c8c-c720-46c3-8534-2fcdd730040d&link_text=View%20team%20roster&partner_deeplink=partner%3A%2F%2Fteam%2F9383">
+        <a class="text-center" href="https://m.uber.com/ul?client_id=gY6iGb3XfnCI35tZ968HvPWA1rmgBSK1&action=setPickup&pickup[latitude]=39.117181&pickup[longitude]=-84.520108&pickup[nickname]=Rhinegeist&pickup[formatted_address]=1910%20Elm%20St%2C%20Cincinnati%2C%20OH%2045202&dropoff[latitude]=39.160671&dropoff[longitude]=-84.542020&dropoff[nickname]=Urban%20Artifact&dropoff[formatted_address]=1660%20Blue%20Rock%20St%2C%20Cincinnati%2C%20OH%2045223&product_id=68cddf62-ea57-4cdf-9c63-dfbfebfd7095">
           <img src="/images/uber.png">
         </a>
       </span>
