--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,7 +8,7 @@
   <div class="row top15">
     <div class="col-md-4 homeButtons col-md-offset-4">
         <p>
-          <a class="col-xs-12 col-md-5 btn btn-primary" href="#">Find Breweries</a>
+          <a class="col-xs-12 col-md-5 btn btn-primary" href="/map">Find Breweries</a>
           <a class="col-xs-12 col-md-5 col-md-offset-2 btn btn-primary" href="/create">Create A Crawl</a>
         </p>
     </div>
