--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1602,7 +1602,6 @@ html {
   margin-top: 40px;
   display: inline-block;
 }
-<<<<<<< HEAD
 .top5 { margin-top:5px; }
 .top7 { margin-top:7px; }
 .top10 { margin-top:10px; }
@@ -1621,7 +1620,7 @@ html {
   /* Set the fixed height of the footer here */
   height: 60px;
   background-color: #f5f5f5;
-=======
+}
 .leaflet-popup {
   bottom: 40px !important;
 }
@@ -1660,7 +1659,6 @@ html {
   margin-top: 20px;
   display: block;
   width: 100%;
->>>>>>> 24d92108b17b851b4d7e3585dbafb5582125e376
 }
 .loader {
   background-color: rgba(0, 0, 0, 0.5);
