Added margin to bottom of create screen

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -44,7 +44,7 @@
         {{/each}}
 
         <div class="col-xs-12">
-        <button type="submit" class="submit btn btn-primary">CREATE</button>
+        <button type="submit" class="submit btn btn-primary submit-new-crawl-button">CREATE</button>
         </div>
       </form>
     </section>
