--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -1,5 +1,28 @@
+{{#section 'meta'}}
+<meta property='og:title' content='{{crawl.name}}' />
+<meta property='og:type' content='website' />
+<meta property='og:image' content='http://cincybrewscene.com/images/mug-fb.png' />
+<meta property='og:url' content='http://cincybrewscene.com/map/{{crawl.id}}' />
+<meta property='og:description' content='Come on the bar crawl with me!' />
+{{/section}}
+
+{{#section 'bodyTop'}}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6&appId=285257965157052";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+{{/section}}
+
 <input type="hidden" id="id" value="{{id}}">
 <div id="map"></div>
+
+<div id="share-buttons">
+  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+</div>
 
 <div class="loader"><i class="fa fa-spinner fa-spin"></i></div>
 
@@ -7,9 +30,9 @@
 <div class="flyout">
 <i class="fa fa-beer"></i>
 </div>
-	<h2>Breweries In Crawl</h2>
-		<div class="brews">
-		</div>
+  <h2>Breweries In Crawl</h2>
+    <div class="brews">
+    </div>
 </div>
 
 {{#section 'scripts'}}
