--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -21,7 +21,7 @@
 <div id="map"></div>
 
 <div id="share-buttons">
-  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse">Share</a></div>
+  <div class="fb-share-button" data-href="http://cincybrewscene.com/map/{{crawl.id}}" data-layout="button" data-mobile-iframe="true"></div>
 </div>
 
 <div class="loader"><i class="fa fa-spinner fa-spin"></i></div>
