--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -22,6 +22,9 @@
 
 <div id="share-buttons">
   <div class="fb-share-button" data-href="http://cincybrewscene.com/map/{{crawl.id}}" data-layout="button" data-mobile-iframe="true"></div>
+  <div id="twitter-share">
+    <a href="https://twitter.com/share" class="twitter-share-button" data-text="Join me on my bar crawl!" data-via="CincyBrewScene">Tweet</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </div>
 </div>
 
 <div class="loader"><i class="fa fa-spinner fa-spin"></i></div>
