--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1762,3 +1762,12 @@ html {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 30px;
 }
+
+#share-buttons > div {
+  display: inline-block;
+  margin-left: 10px;
+}
+
+#twitter-share > iframe {
+  margin-bottom: -5px;
+}
