fixing some styling stuff, fixing gulp, cleaning up a small bit of my ugly ass JS

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="header col-xs-12">
-        <h2><i class="fa fa-beer" aria-hidden="true"></i> Create A Crawl</h2>
+        <h2><i class="fa fa-beer" aria-hidden="true"></i> Create A Crawl <a href="/" class="fa fa-home home"></a></h2>
     </div>
 
 
@@ -34,7 +34,7 @@
         </div>
 
         <div class="form-group">
-          <label for="test">What Breweries Interest You *</label>
+          <label for="test">What Breweries Interest You * (The first one you choose is your starting point)</label>
         </div>
 
         {{#each brews}}
