--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1515,14 +1515,32 @@ html {
   padding: 0;
   height: 100%;
 }
+.container-fluid {
+  padding-bottom: 40px;
+}
+.joinCrawl a {
+  color: #000;
+}
+.mapContainer {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 .header {
   background-color: #1a1a1a;
   color: #fff;
-  height: 80px;
+  height: 60px;
   margin-bottom: 30px;
+}
+.header .home {
+  color: #fff;
+  text-align: right;
+  float: right;
+  margin-right: 10px;
 }
 .header h2 {
   text-align: center;
+  margin-top: 13px;
 }
 .header i {
   margin-right: 10px;
@@ -1602,25 +1620,6 @@ html {
   margin-top: 40px;
   display: inline-block;
 }
-.top5 { margin-top:5px; }
-.top7 { margin-top:7px; }
-.top10 { margin-top:10px; }
-.top15 { margin-top:15px; }
-.top17 { margin-top:17px; }
-.top30 { margin-top:30px; }
-.social {
-  padding-right: 5px;
-  padding-left: 5px;
-  color: #000;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
-}
 .leaflet-popup {
   bottom: 40px !important;
 }
@@ -1674,35 +1673,18 @@ html {
   top: 40%;
   left: 45%;
 }
-
-@media (max-width: 900px) {
-  .loader i {
-    left: 42%;
-  }
-}
-
-@media (max-width: 650px) {
-  .loader i {
-    left: 39%;
-  }
-}
-
-@media (max-width: 480px) {
-  .loader i {
-    left: 30%;
-  }
-}
-
 .allBreweries {
-  position: absolute;
+  position: fixed;
   top: 0;
   right: -250px;
   width: 250px;
+  height: 400px;
   overflow-y: scroll;
   background-color: rgba(255, 255, 255, 0.8);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
   padding: 10px 20px;
   overflow: visible;
+  border-radius: 0px 0px 0px 10px;
 }
 .allBreweries .flyout {
   background-color: rgba(255, 255, 255, 0.8);
@@ -1710,10 +1692,12 @@ html {
   position: absolute;
   top: 0;
   left: -73px;
+  border-radius: 10px 0px 0px 10px;
 }
 .allBreweries h2 {
   color: #000;
   margin-bottom: 20px;
+  text-align: center;
 }
 .allBreweries .brews .brew {
   margin-bottom: 30px;
@@ -1734,59 +1718,45 @@ html {
   margin-top: 0;
   margin-left: 10px;
 }
-
-.create-button {
-  position: absolute;
-  left: 45%;
-  bottom: 50px;
-  margin-top: 20px;
-  background-color: white;
-  background-image: none;
-  border: 2px solid black;
-  color: black;
-  font-size: 20px;
-  padding: 15px 5px;
-  transition: background-color 0.9s ease;
+.social {
+  color: #000;
+  padding-left: 5px;
+  padding-right: 5px;
 }
-
-.create-button:hover {
-  background-color: black;
-  color: #fff;
+.top15 {
+  margin-top: 15px;
 }
-
-@media (max-width: 780px) {
-  .create-button {
+@media (max-width: 900px) {
+  .loader i {
     left: 42%;
   }
 }
-
-@media (max-width: 780px) {
-  .create-button {
+@media (max-width: 650px) {
+  .loader i {
+    left: 39%;
+  }
+}
+@media (max-width: 480px) {
+  .loader i {
     left: 30%;
   }
 }
-
-.uber-link {
-  cursor: pointer;
-}
-
-.submit-new-crawl-button {
-  margin-bottom: 40px;
-}
-
-#share-buttons {
-  position: absolute;
+.create-button {
+  background-color: rgba(255, 255, 255, 0.9);
+  background-image: none;
+  border: 2px solid black;
   bottom: 50px;
-  left: 50px;
-  background-color: rgba(255, 255, 255, 0.8);
-  padding: 30px;
+  color: black;
+  font-size: 20px;
+  left: 45%;
+  margin-top: 20px;
+  padding: 15px 15px;
+  position: absolute;
+  transition: background-color 0.9s ease 0s;
 }
-
-#share-buttons > div {
-  display: inline-block;
-  margin-left: 10px;
-}
-
-#twitter-share > iframe {
-  margin-bottom: -5px;
+.mapContainer .header {
+  left: 0;
+  position: fixed;
+  top: 0;
+  z-index: 9999;
 }
