--- a/public/less/main.less
+++ b/public/less/main.less
@@ -12,14 +12,36 @@ html {
     height: 100%;
 }
 
+.container-fluid {
+	padding-bottom:40px;
+}
+
+.joinCrawl a {
+	color:#000;
+}
+
+.mapContainer {
+	width:100%;
+	height:100%;
+	overflow: hidden;
+}
+
 .header {
 	background-color:lighten(black,10);
 	color:#fff;
-	height:80px;
+	height:60px;
 	margin-bottom:30px;
+
+	.home {
+		color:#fff;
+		text-align:right;
+		float:right;
+		margin-right:10px;
+	}
 
 	h2 {
 		text-align:center;
+		margin-top:13px;
 	}
 
 	i {
@@ -181,7 +203,7 @@ html {
 
 
 .allBreweries {
-	position:absolute;
+	position:fixed;
 	top:0;
 	right:-250px;
 	width:250px;
@@ -191,6 +213,7 @@ html {
 	box-shadow: 0px 0px 20px rgba(0,0,0,.5);
 	padding:10px 20px;
 	overflow:visible;
+	border-radius: 0px 0px 0px 10px;
 
 	.flyout {
 		background-color:rgba(255,255,255,.8);
@@ -198,11 +221,13 @@ html {
 		position:absolute;
 		top:0;
 		left:-73px;
+		border-radius: 10px 0px 0px 10px;
 	}
 
 	h2 {
 		color:#000;
 		margin-bottom:20px;
+		text-align: center;
 	}
 
 	.brews {
@@ -227,4 +252,53 @@ html {
 			}
 		}
 	}
+}
+
+.social {
+    color: #000;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.top15 {
+    margin-top: 15px;
+}
+
+ @media (max-width: 900px) {
+  .loader i {
+    left: 42%;
+  }
+}
+
+@media (max-width: 650px) {
+  .loader i {
+    left: 39%;
+  }
+}
+
+@media (max-width: 480px) {
+  .loader i {
+    left: 30%;
+  }
+}
+
+.create-button {
+    background-color: rgba(255,255,255,.9);
+    background-image: none;
+    border: 2px solid black;
+    bottom: 50px;
+    color: black;
+    font-size: 20px;
+    left: 45%;
+    margin-top: 20px;
+    padding: 15px 15px;
+    position: absolute;
+    transition: background-color 0.9s ease 0s;
+}
+
+.mapContainer .header {
+    left: 0;
+    position: fixed;
+    top: 0;
+    z-index: 9999;
 }
