--- a/views/map.handlebars
+++ b/views/map.handlebars
@@ -1,11 +1,16 @@
-<div id="map"></div>
+<div class="mapContainer">
+	<div class="header col-xs-12">
+        <h2><i class="fa fa-beer" aria-hidden="true"></i> View Map <a href="/" class="fa fa-home home"></a> </h2>
+    </div>
 
-<a href="/create" class="btn btn-default create-button homeButtons">
-  <i class="fa fa-plus" aria-hidden="true"></i>
-  Create a crawl
-</a>
+	<div id="map"></div>
 
+	<a href="/create" class="btn btn-default create-button homeButtons">
+	  <i class="fa fa-plus" aria-hidden="true"></i>
+	  Create a crawl
+	</a>
+</div>
 {{#section 'scripts'}}
-<script src="dist/map.js"></script>
+<script src="/dist/map.js"></script>
 <script src="https://js.arcgis.com/4.0/"></script>
 {{/section}}
