--- a/public/less/main.less
+++ b/public/less/main.less
@@ -204,7 +204,7 @@ html {
 
 .allBreweries {
 	position:fixed;
-	top:0;
+	top:60px;
 	right:-250px;
 	width:250px;
 	height:400px;
@@ -212,7 +212,7 @@ html {
 	background-color:rgba(255,255,255,.8);
 	box-shadow: 0px 0px 20px rgba(0,0,0,.5);
 	padding:10px 20px;
-	overflow:visible;
+	overflow-y:scroll;
 	border-radius: 0px 0px 0px 10px;
 
 	.flyout {
