adding in crawls page

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -124,7 +124,7 @@ html {
 	border:2px solid black;
 	color:black;
 	font-size:20px;
-	padding:10px 60px;
+	padding:10px 40px;
 	transition: background-color 0.9s ease;
 
 	&:hover {
@@ -301,4 +301,20 @@ html {
     position: fixed;
     top: 0;
     z-index: 9999;
+}
+
+
+.singleCrawl {
+	padding:10px;
+
+	h3 {
+		height:3em;
+		text-align:center;
+	}
+
+	> div {
+		background-color:darken(#fff,2);
+		padding:30px;
+		text-align:center;
+	}
 }
