--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1608,7 +1608,7 @@ html {
   border: 2px solid black;
   color: black;
   font-size: 20px;
-  padding: 10px 60px;
+  padding: 10px 40px;
   transition: background-color 0.9s ease;
 }
 .btn-primary:hover {
@@ -1758,4 +1758,16 @@ html {
   position: fixed;
   top: 0;
   z-index: 9999;
+}
+.singleCrawl {
+  padding: 10px;
+}
+.singleCrawl h3 {
+  height: 3em;
+  text-align: center;
+}
+.singleCrawl > div {
+  background-color: #fafafa;
+  padding: 30px;
+  text-align: center;
 }
