--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
   </div>
   <div class="row top15">
     <div class="col-md-12 joinCrawl">
-      <p class="text-center"><a class="text-center" href="#">Looking to Join a Crawl?</a></p>
+      <p class="text-center"><a class="text-center" href="/crawls">Looking to Join a Crawl?</a></p>
     </div>
   </div>
 
