--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -28,6 +28,9 @@
 
 	<div id="map"></div>
 
+	<div id="directions">
+	</div>
+
 	<div id="share-buttons">
 	  <div class="fb-share-button" data-href="http://cincybrewscene.com/map/{{crawl.id}}" data-layout="button" data-mobile-iframe="true"></div>
 	  <div id="twitter-share">
