--- a/public/less/main.less
+++ b/public/less/main.less
@@ -307,9 +307,10 @@ html {
 	position:absolute;
 	top:90px;
 	left:40px;
-	background-color:rgba(0,0,0,.6);
+	background-color:rgba(0,0,0,.7);
 	padding:20px;
 	max-height:400px;
+	max-width:300px;
 	overflow-y:scroll;
 
 	p {
