--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1763,9 +1763,10 @@ html {
   position: absolute;
   top: 90px;
   left: 40px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
   padding: 20px;
   max-height: 400px;
+  max-width: 300px;
   overflow-y: scroll;
 }
 #directions p {
