--- a/views/map-crawl.handlebars
+++ b/views/map-crawl.handlebars
@@ -28,7 +28,12 @@
 
 	<div id="map"></div>
 
-	<div id="directions">
+	<div class="directionContainer">
+		<div id="mapIcon">
+			<i class="fa fa-car"></i>
+		</div>
+		<div id="directions">
+		</div>
 	</div>
 
 	<div id="share-buttons">
