--- a/public/less/main.less
+++ b/public/less/main.less
@@ -334,7 +334,12 @@ html {
 
 	p {
 		color:#fff;
-		margin-bottom:10px;
+		margin-bottom:20px;
+
+		i {
+			margin-right:10px;
+			font-size:17px;
+		}
 	}
 }
 }
