--- a/public/less/main.less
+++ b/public/less/main.less
@@ -364,3 +364,24 @@ html {
 		text-align:center;
 	}
 }
+
+.crawl-brewery {
+	img {
+		max-width:100%;
+	}
+}
+
+.votes {
+	i {
+		font-size:25px;
+		float:left;
+
+		&:hover {
+			cursor:pointer;
+		}
+	}
+
+	p {
+		font-size:20px;
+	}
+}
