--- a/views/crawls.handlebars
+++ b/views/crawls.handlebars
@@ -8,10 +8,10 @@
     <section class="col-md-6 col-md-offset-3">
     <div class="row">
         {{#each crawls}}
-            {{this.reviews}}
             <div class="singleCrawl col-md-6">   
               <div> 
                 <h3>{{this.name}}</h3>
+                <h5><i class="fa fa-thumbs-up"></i> {{this.reviews.length}}</h5>
                 <a href="/crawl/{{this.id}}" class="btn btn-primary">View Crawl</a>
               </div>
             </div>
