--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1814,6 +1814,9 @@ html {
 }
 .crawl-brewery img {
   max-width: 100%;
+  max-height: 150px;
+  margin: 0px auto;
+  display: block;
 }
 .votes i {
   font-size: 25px;
