--- a/public/less/main.less
+++ b/public/less/main.less
@@ -368,6 +368,9 @@ html {
 .crawl-brewery {
 	img {
 		max-width:100%;
+		max-height:150px;
+		margin:0px auto;
+		display:block;
 	}
 	height:200px;
 }
